fix glyphicons not showing bug

--- a/client/sass/styles.scss
+++ b/client/sass/styles.scss
@@ -1,4 +1,4 @@
-@import "bootstrap-sprockets";
+$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 @import "bootstrap";
 @import "selectize/selectize.bootstrap3";
 @import "../bower_components/angular-ui-select/dist/select.css";
